CREACION DE TABLA PARA IMPRESION DE CREDITOS Y CORRECCION DE CERRAR VENTANA EN HISTORIAL DE PRECIOS
